Migrate to Gtk.GLArea instead of SDL2

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,7 +1,16 @@
 gnome = import('gnome')
 
+blueprints = custom_target ('blueprints',
+  input: files (
+    'ui/window.blp',
+  ),
+  output: '.',
+  command: [ find_program ('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@' ],
+)
+
 # Include shaders in executable
 valagl_resources = gnome.compile_resources(
     'valagl-resources',
-    'valagl.gresource.xml'
+    'valagl.gresource.xml',
+    dependencies: blueprints
 )
