--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,13 @@
-project('valagl', ['c', 'vala'],
-    default_options: [ 'warning_level=2' ],
+project(
+    'valagl',
+    
+    ['c', 'vala'],
     version: '1.0',
     meson_version: '>= 0.50.0',
 )
 
 pkg = import('pkgconfig')
+gnome = import('gnome')
 
 # Load custom vapi files
 add_project_arguments(
